fixed weird flex-wrap on first part of the page

--- a/style.css
+++ b/style.css
@@ -20,12 +20,14 @@ html, body {
     justify-content: center;
     margin-bottom: -25px;
     align-items: center;
+    margin-top: 0;
 }
 
 .header {
     display: flex;
     justify-content: center;
     background-color: #1f2937;
+    margin-bottom: 0;
 }
 
 .headerContent {
@@ -60,14 +62,18 @@ a {
 .upperTextnImage {
     display: flex;
     justify-content: space-between;
-    width: 800px;
+    flex-wrap: wrap;
+    max-width: 800px;
     align-items: center;
-    gap: 20px;
+    gap: 5px;
+    padding: 10px 100px;
+
 }
 
 
 .upperTextnImage img {
     width: 350px;
+    align-self: flex-end;
 }
 
 button {
@@ -84,13 +90,15 @@ button {
     font-size: 48px;
     font-weight: 900;
     color: #f9faf8;
+    max-width: 445px;
 }
 
 .textInButtonDown {
     margin-top: 3px;
-    font-size: smaller
     font-size: 18px;
     color: #e5e7eb;
+    max-width: 445px;
+
 }
 
 .button button {
